Project with surefire and failsafe plugins